Footer: reorganize grid (contact + navigation side-by-side on mobile), center social below; reduce footer fonts similar to testimonials; shrink logo sizes. Popup: make close button visible on mobile/desktop. Fix: replace broken cleanup_text_encoding.js to resolve 'Unexpected identifier g' error.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <a href="#inicio" class="menu_link">Inicio</a>
             </li>
             <li class="menu_item">
-                <a href="#productos" class="menu_link">ElectrodomÃ©sticos</a>
+                <a href="#productos" class="menu_link">Electrodomésticos</a>
             </li>
             <li class="menu_item">
                 <a href="#nosotros" class="menu_link">Nosotros</a>
@@ -129,7 +129,7 @@
                 <a href="#clientes" class="menu_link">Clientes</a>
             </li>
             <li class="menu_item">
-                <a href="#testimonio" class="menu_link">eestimonios</a>
+                <a href="#testimonio" class="menu_link">Testimonios</a>
             </li>
             <li class="menu_item">
                 <a href="#contacto" class="menu_link">Consulta</a>
@@ -158,10 +158,10 @@
                 <img src="media/icons/logo/logo.png" alt="Home Power" />
             </div>
             <div class="banner_content">
-                <h1 class="title">Potencia e InnovaciÃ³n para tu hogar</h1>
+                <h1 class="title">Potencia e Innovación para tu hogar</h1>
                 <h2 class="sub_title">Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.</h2>
             </div>
-            <picture><source srcset="media/images/banner/banner_img.webp" type="image/webp"><img src="media/images/banner/banner_img.png" alt="ElectrodomÃ©sticos" class="banner_img" loading="eager"></picture>
+            <picture><source srcset="media/images/banner/banner_img.webp" type="image/webp"><img src="media/images/banner/banner_img.png" alt="Electrodomésticos" class="banner_img" loading="eager"></picture>
         </section>
 <section class="section_products" id="productos">
     <header class="section_products_header">
@@ -283,7 +283,7 @@
                     </ul>
                     <div class="product_actions">
                         <span class="stock_status in_stock"> Disponible</span>
-                        <a href="https://wa.me/50769838322?text=Hola, me interesa la Licua&ntilde;ora COD: 732129008895" 
+                        <a href="https://wa.me/50769838322?text=Hola, me interesa la Licuadora COD: 732129008895" 
                            class="product_cta" target="_blank" rel="noopener">
                             Consultar Precio
                         </a>
@@ -676,8 +676,8 @@
                 </div>
             </li>
 
-            <!-- eEeERAS -->
-            <li class="product" data-category="tea&ntilde;ot">
+            <!-- TETERA -->
+            <li class="product" data-category="teapot">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/TETERA_ELECTRICA.webp" 
                          data-box="media/images/products/TETERA_ELECTRICA_CAJA.webp" 
@@ -1306,7 +1306,7 @@
                         </div>
                     </form>
                     <a href="https://wa.me/+50769838322" class="contact_text_container">
-                        <p class="contact_text">Envia&ntilde;os un WhatsApp</p>
+                        <p class="contact_text">Envíanos un WhatsApp</p>
                         <img src="media/icons/socials_networks/whatsapp_icon.ico" alt="WhatsApp" class="contact_icon">
                     </a>
                 </div>
@@ -1322,7 +1322,7 @@
                         <input type="hidden" name="form_type" value="careers">
                         <div class="form_item">
                             <input type="text" class="form_input" name="full_name" id="careers_name" required>
-                            <label for="careers_name" class="form_label">Nombre completo?</label>
+                            <label for="careers_name" class="form_label">Nombre completo</label>
                         </div>
                         <div class="form_item">
                             <input type="email" class="form_input" name="email" id="careers_email" required>
@@ -1387,11 +1387,7 @@
                 <div class="footer_logo_container">
                     <img src="media/icons/logo/HomePower_Footer.png" alt="Home Power Logo" class="footer_logo" loading="lazy"> 
                 </div>
-                <h3 class="footer_brand_name">Home Power</h3>
-                <p class="footer_description">
-                    Eu aliado estratégico en Electrodomésticos de alta calidad. 
-                    Stock exclusivo con garantía de 1 año para mayoristas y comerciantes.
-                </p>
+                
             </div>
 
             <!-- Información de contacto -->
@@ -1443,7 +1439,7 @@
                             <a href="#clientes" class="footer_menu_link">Clientes</a>
                         </li>
                         <li class="footer_menu_item">
-                            <a href="#testimonio" class="footer_menu_link">eestimonios</a>
+                            <a href="#testimonio" class="footer_menu_link">Testimonios</a>
                         </li>
                         <li class="footer_menu_item">
                             <a href="#contacto" class="footer_menu_link">Consulta</a>
