--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <meta name="author" content="Net Web">
 
     <link rel="canonical" href="https://www.homepowerpty.com/">
+    <!-- No-cache meta para desarrollo y forzar refresco en Safari iOS -->
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
 
     <meta property="og:title" content="Homepowerpty">
     <meta property="og:description" content="Stock exclusivo para negocios que buscan lo mejor en calidad y tecnología.">
@@ -50,12 +54,12 @@
     <meta name="msapplication-eileColor" content="#FF9F1C" />
     <meta name="msapplication-eileImage" content="media/icons/favicon/favicon-512x512.png" />
 
-    <link rel="stylesheet" href="styles/config_new.css">
-    <link rel="stylesheet" href="styles/templates/contact_header_info.css">
-    <link rel="stylesheet" href="styles/templates/header_new.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/templates/footer.css">
-    <link rel="stylesheet" href="styles/templates/social_header.css">
+    <link rel="stylesheet" href="styles/config_new.css?v=1.3">
+    <link rel="stylesheet" href="styles/templates/contact_header_info.css?v=1.3">
+    <link rel="stylesheet" href="styles/templates/header_new.css?v=1.3">
+    <link rel="stylesheet" href="styles/styles.css?v=1.3">
+    <link rel="stylesheet" href="styles/templates/footer.css?v=1.3">
+    <link rel="stylesheet" href="styles/templates/social_header.css?v=1.3">
     <title>Home Power - Electrodomésticos de Calidad en Panamá</title>
     <meta name="robots" content="index, follow">
 </head>
@@ -111,7 +115,7 @@
 
 <header class="header" id="header">
     <div class="logo_container">
-        <img src="media/icons/logo/logo.png" alt="Home Power" class="logo_icon">
+<img src="media/icons/logo/logo.png" alt="Home Power" class="logo_icon" style="transform: scale(1.25); transform-origin: left center;">
     </div>
 
     <nav class="nav_bar">
@@ -649,7 +653,7 @@
                 </div>
             </li>
 
-            <!-- HORNIeO -->
+            <!-- HORNITO -->
             <li class="product" data-category="oven">
                 <div class="product_badge premium">Premium</div>
                 <div class="product_image_wrapper">
@@ -702,7 +706,7 @@
                 </div>
             </li>
 
-            <li class="product" data-category="tea&ntilde;ot">
+            <li class="product" data-category="teapot">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/TETERA_ELECTRICA_2.webp"
                         data-box="media/images/products/TETERA_ELECTRICA_2_CAJA.webp"
@@ -727,7 +731,7 @@
                 </div>
             </li>
 
-            <!-- eOSeADORAS -->
+            <!-- TOSTADORAS -->
             <li class="product" data-category="toaster">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/TOSTADORA.webp" 
@@ -1481,6 +1485,11 @@
         </div>
     </footer>
 
+    <!-- Botón flotante de WhatsApp -->
+    <a href="https://wa.me/50769838322" class="whatsapp_float" target="_blank" rel="noopener" aria-label="WhatsApp">
+        <img src="media/icons/socials_networks/whatsapp_icon.png" alt="WhatsApp" class="whatsapp_float_icon" loading="lazy">
+    </a>
+
 <!-- FECHAS PATRIAS POPUP -->
 <div id="blackWeekPopup" class="black-week-popup">
     <div class="popup-overlay"></div>
@@ -1507,20 +1516,34 @@
         </div>
     </div>
 </div>
-    <script src="scripts/fix_text.js"></script>
-    <script src="scripts/header.js"></script>
-    <script src="scripts/inputs.js"></script>
-    <script src="scripts/clients_slider.js"></script>
-    <script src="scripts/filter_products.js"></script>
-    <script src="scripts/send_contact_form.js"></script>
-    <script src="scripts/send_careers_form.js"></script>
-    <script src="scripts/product-interactions.js"></script>
-    <script src="scripts/avatar_effects.js"></script>
-    <script src="scripts/image-optimization.js"></script>
-    <script src="scripts/file_upload.js"></script>
-    <script src="scripts/black_week_popup.js"></script>
-    <script src="scripts/cv_button_handler.js"></script>
-<script src="scripts/cleanup_text_encoding.js"></script>
+    <style id="hotfix-homepower">
+        /* Correcciones: banner de clientes más alto y scroll horizontal */
+        .clients_slider_container {
+            min-height: 180px;
+            overflow-x: auto;
+            overflow-y: hidden;
+            -webkit-overflow-scrolling: touch;
+            scroll-snap-type: x mandatory;
+        }
+        .clients_slider { animation: none !important; }
+        .clients_slider:hover { animation-play-state: initial !important; }
+        .client { scroll-snap-align: start; }
+        .client_logo { object-fit: contain; }
+    </style>
+    <script src="scripts/fix_text.js?v=1.3"></script>
+    <script src="scripts/header.js?v=1.3"></script>
+    <script src="scripts/inputs.js?v=1.3"></script>
+    <script src="scripts/clients_slider.js?v=1.3"></script>
+    <script src="scripts/filter_products.js?v=1.3"></script>
+    <script src="scripts/send_contact_form.js?v=1.3"></script>
+    <script src="scripts/send_careers_form.js?v=1.3"></script>
+    <script src="scripts/product-interactions.js?v=1.3"></script>
+    <script src="scripts/avatar_effects.js?v=1.3"></script>
+    <script src="scripts/image-optimization.js?v=1.3"></script>
+    <script src="scripts/file_upload.js?v=1.3"></script>
+    <script src="scripts/black_week_popup.js?v=1.3"></script>
+    <script src="scripts/cv_button_handler.js?v=1.3"></script>
+<script src="scripts/cleanup_text_encoding.js?v=1.3"></script>
 </body>
 </html>
 
