feat: Implementar popup promocional con redireccion a WhatsApp
- Activar popup modal al inicio (aparece tras 1.2s)
- Agregar redireccion a WhatsApp (66133830) al hacer clic
- Mensaje predefinido: 'Me interesa obtener informacion de sus productos'
- Actualizar imagen a banner-dale-clic.png
- Agregar test_popup.html para debugging
- Mejorar UX con cursor pointer y animaciones

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <link rel="icon" sizes="512x512" href="media/icons/favicon/favicon-512x512.png" type="image/png" />
     <link rel="manifest" href="media/icons/favicon/manifest.json" />
 
-    <meta name="msapplication-eileColor" content="#FF9F1C" />
-    <meta name="msapplication-eileImage" content="media/icons/favicon/favicon-512x512.png" />
+    <meta name="msapplication-TileColor" content="#FF9F1C" />
+    <meta name="msapplication-TileImage" content="media/icons/favicon/favicon-512x512.png" />
 
     <link rel="stylesheet" href="styles/config_new.css">
     <link rel="stylesheet" href="styles/templates/contact_header_info.css">
@@ -173,7 +173,7 @@
             <li class="product_category" data-category="iron">Planchas</li>
             <li class="product_category" data-category="blender">Licuadoras</li>
             <li class="product_category" data-category="air_fryer">Air Fryer</li>
-            <li class="product_category" data-category="tea&ntilde;ot">Teteras</li>
+            <li class="product_category" data-category="teapot">Teteras</li>
             <li class="product_category" data-category="toaster">Tostadoras</li>
             <li class="product_category" data-category="stove">Estufas</li>
             <li class="product_category" data-category="coffee_maker">Cafeteras</li>
@@ -703,7 +703,7 @@
                 </div>
             </li>
 
-            <li class="product" data-category="tea&ntilde;ot">
+            <li class="product" data-category="teapot">
                 <div class="product_image_wrapper">
                     <img src="media/images/products/TETERA_ELECTRICA_2.webp"
                         data-box="media/images/products/TETERA_ELECTRICA_2_CAJA.webp"
@@ -1521,11 +1521,12 @@
     <div class="promo-card" role="document">
         <button class="promo-close" type="button" aria-label="Cerrar promo" data-close-popup>&times;</button>
         <div class="promo-media">
-            <img src="media/images/Promocion/optimized/mother-day-homepowerpty.png" 
-                 alt="Promocion Home Power"
+            <img src="media/images/Promocion/optimized/banner-dale-clic.png" 
+                 alt="Dale Click y Contáctanos - Home Power"
                  class="promo-image"
                  loading="lazy"
-                 decoding="async">
+                 decoding="async"
+                 title="Click para contactarnos por WhatsApp">
         </div>
     </div>
 </div>
@@ -1615,9 +1616,6 @@
     <script src="scripts/cleanup_text_encoding.js"></script>
 </body>
 </html>
-
-
-
 
 
 
