Renombrar black_week_popup.js a seasonal_popup.js y agregar estilos para canvas de carnaval

--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
     <script src="scripts/avatar_effects.js"></script>
     <script src="scripts/image-optimization.js"></script>
     <script src="scripts/file_upload.js"></script>
-    <script src="scripts/black_week_popup.js?v=20260128"></script>
+    <script src="scripts/seasonal_popup.js?v=20260211"></script>
     <script src="scripts/cv_button_handler.js"></script>
     <script src="scripts/cleanup_text_encoding.js"></script>
 </body>
